--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#teams" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
                 <div id="blog">
-                    <li><a href="https://technical-fields.blogspot.com" class="blogbtn" target="blank">My Blog Site</a></li>
+                    <li><a href="https://cybersecureark.blogspot.com/?m=1" class="blogbtn" target="blank">My Blog Site</a></li>
                 </div>
             </ul>
             
