--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="column right">
                     <div class="text">I'm Rohan and I'm a <span class="typing-2"></span></div>
                     <p>
-                        Hi! Myself Rohan Raj, Currently I'm pursing Bachalor Of Technology(B.Tech) degree in Computer Science And Engineering(CSE) stream from University of Engineering And Management Jaipur(UEMJ). My interest is in Web Technologies, Computer Networking, CyberSecurity, Cryptography, BlockChain and Ethical Hacking. My Carrer goal is to be certified Cloud Engineer.
+                        Hi! Myself Rohan Raj, Currently I'm pursing Bachelor Of Technology(B.Tech) degree in Computer Science And Engineering(CSE) stream from University of Engineering And Management Jaipur(UEMJ). My interest is in Web Technologies, Computer Networking, CyberSecurity, Cryptography, BlockChain and Ethical Hacking. My Carrer goal is to be certified Cloud Engineer.
                         </p>
                     <a href="#">Download CV</a>
                 </div>
@@ -83,7 +83,7 @@
                         <div class="text">B.Tech</div>
                         <p> <b>University:-</b>University Of Engineering And Management</p><br>
                         <p><b>Address:-</b>Jaipur Rajasthan</p><br>
-                        <p><b>CGPA:- </b> 8.41 Till 4th Semester</p><br>
+                        <!-- <p><b>CGPA:- </b> 8.41 Till 4th Semester</p><br> -->
                         <!-- <p><b>Gradution:-</b>2019-2023</p> -->
                     </div>
                 </div>
