--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
             <a href="https://www.instagram.com/r.o.h.a.n_r.a.j/"><i class="fab fa-instagram"></i></a>
             <a href="https://github.com/rohanraj1095/" target="blank"><i class="fab fa-github"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
+           <a href="https://twitter.com/rohanraj1095"><i class="fab fa-twitter"></i></a>
         </div> 
         <span>Created By <a href="#">RohanRaj</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
